# Sol-Indexer

./: .env.example  Cargo.toml  README.md  docker-compose.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs  source.rs  storage.rs
crates/db/: Cargo.toml  diesel.toml
crates/db/migrations/2025-08-22-053212_create_blocks/: up.sql
crates/db/migrations/2025-08-22-053331_create_transactions/: up.sql
crates/db/migrations/2025-08-22-055005_create_entries/: down.sql  up.sql
crates/db/migrations/2025-08-22-055059_create_accounts/: up.sql
crates/db/migrations/2025-08-22-074921_create_transaction_meta/: down.sql  up.sql
crates/db/migrations/2025-08-22-075016_create_token_balance/: down.sql  up.sql
crates/db/migrations/2025-08-28-200516_create_transactions/: up.sql
crates/db/migrations/2025-08-29-041902_create_accounts/: up.sql
crates/db/migrations/2025-08-29-042811_create_blocks/: up.sql
crates/db/migrations/2025-08-29-065240_create_slots/: up.sql
crates/db/migrations/2025-08-29-091327_create_transactions/: down.sql  up.sql
crates/db/src/: lib.rs  main.rs  schema.rs  store.rs
crates/db/src/models/: accounts.rs  mod.rs  slots.rs  transactions.rs
crates/geyser-adapter/: Cargo.toml  filters.json
crates/geyser-adapter/src/: filter.rs  filters.json  geyser.rs  lib.rs  main.rs
crates/redis-adapter/: Cargo.toml
crates/redis-adapter/src/: lib.rs
