[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
diesel = { version = "2.2.12", features = ["postgres", "r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
redis-adapter = { path = "../redis-adapter" }
core = { path = "../core" }
tokio = { version = "1.47.1", features = ["full"] }
config ={ path = "../config" }