[package]
name = "geyser-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
core = { path = "../core" }
