[package]
name = "geyser-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.14.1", features = ["transport"] }
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
prost = "0.14.1"
core = { path = "../core" }
redis-adapter = { path = "../redis-adapter" }
config ={ path = "../config" }
env_logger = "0.11.8"
log = "0.4.27"
rustls = { version = "0.23.31", features = ["ring"] }
colored = "3.0.0"
tracing = "0.1.41"
